--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,18 +4,20 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Hind+Madurai:wght@300;600&display=swap" rel="stylesheet">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
-
+    </head>
+    <body class="bg-secondary">
+            {% include "partials/_header.html.twig" %}
+        {% block body %}
+        {% endblock %}
+            {% include "partials/_footer.html.twig" %}
+    </body>
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
-    </head>
-    <body>
-            {% include "partials/header.html.twig" %}
-        {% block body %}
-        {% endblock %}
-            {% include "partials/footer.html.twig" %}
-    </body>
 </html>
