--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Connexion{% endblock %}
 
 {% block body %}
 <form method="post">
     {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="alert alert-danger dangerAlert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+
     {% endif %}
 
     {% if app.user %}
@@ -13,19 +14,44 @@
             You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
+    <div class="row justify-content-center">
+        <h1 class="my-5 font-weight-normal text-success text-center shadow-lg col-lg-6">Connexion</h1>
+        <div class="row justify-content-center">         
+            <label for="inputEmail" class="text-light col-lg-4">Email
+                <input
+                    type="email" 
+                    value="{{ last_username }}" 
+                    name="email" 
+                    id="inputEmail" 
+                    class="form-control mb-5" 
+                    autocomplete="email" 
+                    required autofocus
+                />
+            </label>
+        </div>
+        <div class="row justify-content-center">
+            <label for="inputPassword" class="text-light col-lg-4">Mot de passe
+                <input 
+                    type="password" 
+                    name="password" 
+                    id="inputPassword" 
+                    class="form-control mb-5" 
+                    autocomplete="current-password" 
+                    required autofocus
+                />
+            </label>
+        </div>
+        <input 
+            type="hidden" 
+            name="_csrf_token"
+            value="{{ csrf_token('authenticate') }}"
+        />
+        <div class="row row-cols-3 justify-content-center">
+        <button class="btn btn-lg btn-outline-info my-5 col-2 mx-3 linkNav" type="submit">
+            Me connecter
+        </button>
+        <a href="{{ path('app_') }}" class="btn btn-lg btn-success my-5 col-2 linkNav">Retour</a>
+        </div>
+    </div>
 </form>
 {% endblock %}
