--- a/templates/used_car/index.html.twig
+++ b/templates/used_car/index.html.twig
@@ -12,8 +12,9 @@
         </section>
         <section>
             <div class="row justify-content-center">
-               {% include "partials/advert/_card.html.twig" %}
+                {% include "partials/advert/_card.html.twig" %}
             </div>
+    {{ knp_pagination_render(adverts) }}
         </section>
-    </main>
+    </main>    
 {% endblock %}
