--- a/templates/used_car_details/index.html.twig
+++ b/templates/used_car_details/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <main class="container-fluid">
         <section class="row justify-content-center">
-            <h1 class="col-lg-8 mt-3 text-success text-center shadow-lg rounded mb-5">Détail du véhicule : {{ advert.title }} </h1>
+            <h1 class="col-lg-8 mt-3 text-success text-center shadow-lg mb-5">Détail du véhicule : {{ advert.title }} </h1>
             {% include "partials/advert/_car_picture_details.html.twig" %}
         <div class="table-responsive-md col-lg-6">
             {% include "partials/advert/_table_details_car.html.twig" %}
