--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,10 +4,8 @@
 
 {% block body %}
 <form method="post">
-    {% if error %}
-        <div class="alert alert-danger dangerAlert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 
-    {% endif %}
+    {% include "partials/flash_message/_error_flash_message.html.twig" %}
 
     {% if app.user %}
         <div class="mb-3">
