form + about + modif logo et charte graphique

--- a/templates/maintenance_service/index.html.twig
+++ b/templates/maintenance_service/index.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Entretiens et Service{% endblock %}
+{% block title %}Entretiens et Service - Garage Parrot{% endblock %}
 
 {% block body %}
  <main class="container-fluid">
         <section class="row justify-content-center">
             <h1 class="col-lg-8 mt-3 p-3 text-success text-center shadow-lg rounded mb-5">Entretiens et services</h1>
-            <img src="{{ asset('build/images/mécanique-auto.jpg')}}" class="atelier col-10 w-50 mb-5" alt="photo_atelier">
+            <img src="{{ asset('build/images/mécanique-auto.jpg')}}" class="atelier col-lg-10 mb-5 img-fluid" alt="photo_atelier">
         </section>
         <section class="row justify-content-center">
             <h2 class="col-6 bg-success text-center fw-bold shadow-lg rounded my-5">Entretiens</h2>
