--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -4,11 +4,11 @@
       <div class="container-fluid">
           <a href="/" class="navbar-brand">
             <img
-              src=" {{ asset('build/images/logo_complet_rect.png') }} " 
+              src=" {{ asset('build/images/logo rectangle.png') }} " 
               width="278" 
-              height="100" 
+              height="80" 
               alt="logo" 
-              class="mx-lg-2"
+              class="mx-lg-2 img-fluid"
             >
           </a>
         <button 
