--- a/templates/partials/advert/_card.html.twig
+++ b/templates/partials/advert/_card.html.twig
@@ -3,7 +3,7 @@
     {% include "partials/advert/_car_picture_card.html.twig" %}
     <div class="card-body">
         <h4 class="card-title text-success fw-semibold linkNav text-center">{{ advert.title}}</br></br></h5>
-        <p class="card-text fw-semibold border-top text-success text-center linkNav">Prix : {{ advert.price }}€ </p>
+        <p class="card-text fw-semibold border-top text-primary text-center linkNav">Prix : {{ advert.price }}€ </p>
         <p class="card-text text-light fw-semibold">Kilométrage : {{ advert.km }} km</p>
         <p class="card-text text-light fw-semibold">Emission Co2 : {{ advert.co2Emission }} g/km</p>
         <a 
