--- a/templates/partials/home/_block_comment.html.twig
+++ b/templates/partials/home/_block_comment.html.twig
@@ -55,6 +55,6 @@
             </div>
         {% endif %}
         <div class="col-8 text-light">Avis posté par : {{ comment.nickname }}</div> 
-        <div class="col-8 text-light mb-3"> {{ comment.designation | raw }}</div></br>    
+        <div class="col-8 text-primary mb-3"> {{ comment.designation | raw }}</div></br>    
 {% endif %}
 {% endfor %}
