--- a/templates/partials/home/_modal_comment.html.twig
+++ b/templates/partials/home/_modal_comment.html.twig
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-outline-success col-lg-3 linkNav mb-5" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+<button type="button" class="btn btn-outline-success col-lg-3 col-6 linkNav mb-5" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
 Poster un avis
 </button>
 <form method="post">
