--- a/templates/used_car_details/index.html.twig
+++ b/templates/used_car_details/index.html.twig
@@ -12,8 +12,8 @@
         <p class="text-success fw-bold">Besoin de plus d'informations?</p>
         <a 
             class="btn btn-outline-info mb-5 linkNav" 
-            href="#">Contacter le vendeur
-        </a>
+            href="{{path('app_form_id', {'id': advert.id})}}">Contacter le vendeur
+        </a>>
         <a class="btn btn-success text-dark mb-5 linkNav" href="{{path('app_used_car')}}">Retour</a>
         </div>
         </section>
