--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,13 +1,15 @@
 // assets/styles/global.scss
 
 // customize some Bootstrap variables
-$primary: #151f67;
-$secondary: #154d67;
-$success: #e6de01;
+// $primary: #151f67;
+//$secondary: #154d67;
+$success: #FDB402;
 $info: #58f544;
-$dark: #000000;
-$light: #d4d4d4;
-
+$dark: #1C1A1D;
+//$light: #d4d4d4;
+$primary: #554c3b;
+$secondary: #a5a293;
+$light:#eeebc1;
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
 
@@ -62,6 +64,14 @@ a {
 
 .atelier {
   border-radius: 10%;
+  width: 50vw;
+}
+@media screen and (max-width:991px) {
+  .atelier {
+    border-radius: 10%;
+    width: 100vw;
+  }
+
 }
 
 .slide-1,
@@ -74,8 +84,7 @@ a {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 20vw;
-  width: auto;
+
 }
 
 @media screen and (max-width:991px) {
@@ -89,8 +98,21 @@ a {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 20vh;
-  width: 75vw;
+  height: 35vh;
+}
+}
+
+@media (orientation:landscape) and (max-width:991px) {
+  .slide-1,
+  .slide-2,
+  .slide-3,
+  .slide-4,
+  .slide-5 {
+  background-color: $secondary ;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 45vw;
 }
 }
 
@@ -119,4 +141,8 @@ a {
 .formu-contact{
   display: inline-block;
   margin-right: 10px;
+}
+
+.phone{
+  border-radius: 50%;
 }
