--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -45,10 +45,10 @@
             value="{{ csrf_token('authenticate') }}"
         />
         <div class="row row-cols-3 justify-content-center">
-        <button class="btn btn-lg btn-outline-info my-5 col-2 mx-3 linkNav" type="submit">
+        <button class="btn btn-lg btn-outline-info my-5 col-lg-2 mx-3 linkNav" type="submit">
             Me connecter
         </button>
-        <a href="{{ path('app_') }}" class="btn btn-lg btn-success my-5 col-2 linkNav">Retour</a>
+        <a href="{{ path('app_') }}" class="btn btn-lg btn-success my-5 col-lg-2 linkNav">Retour</a>
         </div>
     </div>
 </form>
