sitemap + dashboard users

--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -12,4 +12,6 @@
 
 {% include "partials/about/_confidentials_law.html.twig" %}
 
+{% include "partials/about/_sitemap.html.twig" %}
+
 {% endblock %}
