--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,6 +1,6 @@
 <footer class="row row-cols-lg-4 py-2 border-top bg-dark">
     <div class="col mb-3">
-      <a href="#" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
+      <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
         <img class="bi me-2" width="200" height="200" src="{{asset('build/images/logo carre.png')}}" alt="logo">
       </a>
       <p class="text-light fw-bold">© 2023</p>
@@ -21,7 +21,7 @@
                                      Politique de confidentialité
                                   </a>
         </li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light fw-bold">
+        <li class="nav-item mb-2"><a href="{{ path('app_about') }}#sitemap" class="nav-link p-0 text-light fw-bold">
                                      Plan du site
                                   </a>
         </li>
