--- a/templates/partials/about/_confidentials_law.html.twig
+++ b/templates/partials/about/_confidentials_law.html.twig
@@ -6,6 +6,7 @@
             allowfullscreen="" 
             loading="lazy"  
             frameborder="0"
-            id="confidentialsLaw">
+            id="confidentialsLaw"
+            class="my-5">
     </iframe>
 </div>
