--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -50,7 +50,25 @@ Nous écrire
               </ul>
             </li>
           </ul>
-        <a href="{{ path('app_login') }}"><button type="button" class="btn btn-outline-success linkNav">Connexion</button></a>
+        {% if app.user %}
+          <p class="text-success fw-bold mx-2 my-lg-3 linkNav">
+            Bonjour {{app.user.firstName}} {{app.user.lastName|first}}.</br> {{app.user.workplace.designation}}
+          </p>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href= "{% if is_granted('ROLE_ADMIN') %} {{ path('admin')}}
+                        {% else %}
+                          {{ path('app_user') }} 
+                        {% endif %}"
+                ><button type="button" class="btn btn-outline-secondary linkNav mx-lg-2">Mon compte</button>
+              </a>
+            <li class="nav-item">
+              <a href="{{ path('app_logout') }}"><button type="button" class="btn btn-outline-success linkNav">Déconnexion</button></a>
+            </li>
+          </ul>
+        {% else %}
+         <a href="{{ path('app_login') }}"><button type="button" class="btn btn-outline-success linkNav">Connexion</button></a> 
+        {% endif %}
         </div>
       </div>
   </nav>
