--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,14 +2,14 @@
 
 {% block title %}Connexion{% endblock %}
 
-{% block body %}
-<form method="post">
+{% block body %} 
+<form method="post" action="{{ path('app_login')}}">
 
     {% include "partials/flash_message/_error_flash_message.html.twig" %}
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
         </div>
     {% endif %}
     <div class="row justify-content-center">
