modif organisation des boutons

--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -60,10 +60,10 @@ Nous écrire
                         {% else %}
                           {{ path('app_user') }} 
                         {% endif %}"
-                ><button type="button" class="btn btn-outline-secondary linkNav mx-lg-2">Mon compte</button>
+                ><button type="button" class="btn btn-outline-secondary linkNav mx-lg-2 my-2">Mon compte</button>
               </a>
             <li class="nav-item">
-              <a href="{{ path('app_logout') }}"><button type="button" class="btn btn-outline-success linkNav">Déconnexion</button></a>
+              <a href="{{ path('app_logout') }}"><button type="button" class="btn btn-outline-success linkNav mt-2">Déconnexion</button></a>
             </li>
           </ul>
         {% else %}
