--- a/templates/used_car/index.html.twig
+++ b/templates/used_car/index.html.twig
@@ -11,10 +11,14 @@
             </div>
         </section>
         <section>
-            <div class="row justify-content-center">
+            <div class="row justify-content-center" id="resultats">
                 {% include "partials/advert/_card.html.twig" %}
             </div>
     {{ knp_pagination_render(adverts) }}
         </section>
     </main>    
+{% endblock %}
+
+{% block javascripts %}
+    {{encore_entry_script_tags('app')}}
 {% endblock %}
