--- a/templates/partials/advert/_filters_car.html.twig
+++ b/templates/partials/advert/_filters_car.html.twig
@@ -1,10 +1,12 @@
-{{ form_start(form, {'attr': {'id': 'filters', 'class':"col-lg-6 mb-5"}}) }}>
-    <div class="containerFilters shadow-lg">
-        <p class="mx-5">
-            {{ form_widget(form) }}
-        </p>
-    </div>
-{{ form_end(form) }}
+ <form class="col-lg-10 justify-self-start">
+    <h2 class="text-center text-light mb-5">Filtres</h2>
+        <div>
+            <slider-component />
+        
+        </div>
+
+</form> 
+
 
 
 
