--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -40,9 +40,15 @@
                   <a class="dropdown-item linkNav" href="tel:0383838282">Par téléphone</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="{{ path('app_form') }}"><button type="button" class="btn linkNav" data-bs-toggle="modal2" data-bs-target="#staticBackdrop2">
-Nous écrire
-</button></a>
+                  <a class="dropdown-item" href="{{ path('app_form') }}">
+                    <button 
+                      type="button" 
+                      class="btn linkNav" 
+                      data-bs-toggle="modal2" 
+                      data-bs-target="#staticBackdrop2"
+                    >Nous écrire
+                    </button>
+                  </a>
                 </li>
                 <li>
                   <a class="dropdown-item linkNav" href="/#plan-toulouse">Nous localiser</a>
@@ -72,4 +78,5 @@ Nous écrire
         </div>
       </div>
   </nav>
+
 </header>
